default/objects/Trigger_Execution_Log__c/Trigger_Execution_Log__c.object-meta.xml
<CustomObject>
    <description>Log of trigger execution logic for debugging.</description>
    <label>Trigger Execution Log</label>
    <nameField>
        <displayFormat>TEL-{000000}</displayFormat>
        <label>Trigger Execution Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Execution Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>