default/objects/Trigger_Execution_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The log of execution events</description>
    <inlineHelpText>The log of execution events</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>