default/objects/Trigger_Execution_Log__c/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>