default/objects/Trigger_Execution_Log__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>