default/objects/Trigger_Execution_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>SObject_Type__c</columns>
    <columns>Trigger_Name__c</columns>
    <columns>TimeStamp__c</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>